--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "jest-environment-jsdom": "^29.5.0",
     "react-test-renderer": "^18.2.0",
     "style-loader": "^3.3.2",
+    "supertest": "^6.3.3",
     "tailwindcss": "^3.2.7",
     "webpack": "^5.76.1",
     "webpack-cli": "^5.0.1"
