--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "express": "^4.18.2",
     "flowbite": "^1.6.4",
     "fs": "^0.0.1-security",
+    "memjs": "^1.3.1",
     "mongoose": "^7.0.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.2.0",
